# Plazza

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: main.cpp
src/Communication/: IPCManager.cpp  IPCManager.hpp  Message.cpp  Message.hpp  MessageQueue.cpp  MessageQueue.hpp  Serialization.cpp  Serialization.hpp
src/Core/: OpaqueObject.cpp  OpaqueObject.hpp  Pizza.cpp  Pizza.hpp  PizzaPacket.cpp  PizzaPacket.hpp  Process.cpp  Process.hpp  Thread.cpp  Thread.hpp  ThreadQueue.hpp
src/Exceptions/: ArgumentException.hpp  IPCException.hpp  MessageException.hpp  OpaqueObjectException.hpp  ParserException.hpp  PlazzaException.hpp  ProcessException.hpp  ThreadException.hpp
src/Kitchen/: Cook.cpp  Cook.hpp  Kitchen.cpp  Kitchen.hpp  Stock.cpp  Stock.hpp
src/Logger/: Logger.cpp  Logger.hpp
src/Reception/: KitchenManager.cpp  KitchenManager.hpp  OrderParser.cpp  OrderParser.hpp  Reception.cpp  Reception.hpp
